# Basic-Raytracer

./: CMakeLists.txt  LICENSE  README.md
examples/: README.md
examples/sphere/: sphere.ppm
include/core/: bounding_box.h  ray.h
include/geometry/: mesh.h
include/geometry/primitives/: cube.h  smooth_triangle.h  sphere.h
include/image/: camera.h  color.h
include/material/: material.h
include/material/patterns/: gradient_material.h  ring_material.h
include/math/: tuple.h
include/scene/: world.h
include/scene/lights/: spot_light.h
include/utility/: constants.h  helper.h
src/: CMakeLists.txt  main.cpp
src/core/: bounding_box.cpp  bounding_box.h  computation.cpp  computation.h  intersection.cpp  intersection.h  material.cpp  material.h  ray.cpp  ray.h
src/geometry/: csg.cpp  csg.h  group.cpp  group.h  mesh.cpp  mesh.h
src/geometry/primitives/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  plane.cpp  plane.h  primitive.cpp  primitive.h  smooth_triangle.cpp  smooth_triangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/image/: camera.cpp  camera.h  color.cpp  color.h  framebuffer.cpp  framebuffer.h
src/main/: common.cpp  common.h  main.cpp
src/material/: color_material.cpp  color_material.h  material.cpp  material.h
src/material/patterns/: checker_material.cpp  checker_material.h  gradient_material.cpp  gradient_material.h  pattern.cpp  pattern.h  ring_material.cpp  ring_material.h  stripe_material.cpp  stripe_material.h
src/materials/: checker_material.cpp  checker_material.h  color_material.cpp  color_material.h  gradient_material.cpp  gradient_material.h  material.cpp  material.h  pattern.cpp  pattern.h  ring_material.cpp  ring_material.h  stripe_material.cpp  stripe_material.h  stripe_pattern.cpp  stripe_pattern.h
src/materials/patterns/: checker_material.cpp  checker_material.h  gradient_material.cpp  gradient_material.h  pattern.cpp  ring_material.cpp  ring_material.h  stripe_material.cpp  stripe_material.h
src/math/: matrix.cpp  matrix.h  tuple.cpp  tuple.h
src/primitives/: cone.cpp  cone.h  csg.cpp  csg.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  intersection.cpp  intersection.h  mesh.cpp  mesh.h  plane.cpp  plane.h  primitive.cpp  primitive.h  smooth_triangle.cpp  smooth_triangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/scene/: directional_light.cpp  directional_light.h  light.cpp  light.h  lighting.cpp  lighting.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h  world.cpp  world.h
src/scene/lights/: directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/util/: common.cpp  common.h  tuple.h
src/util/image/: framebuffer.cpp  framebuffer.h
src/util/math/: matrix.cpp  matrix.h  tuple.cpp  tuple.h
src/utility/: common.cpp  common.h  constants.h  helper.cpp  helper.h
